fixing scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,3 @@
-/*-----------------------------------*\
- * style.css
-\*-----------------------------------*/
-
-/**
- * copyright 2022 codewithsadee
- */
-
-
-
-
 
 /*-----------------------------------*\
  * #CUSTOM PROPERTY
@@ -67,6 +56,9 @@
 
 }
 
+body::-webkit-scrollbar{
+  display: none;
+}
 
 /*-----------------------------------*\
  * #THEME COLORS
